@@ -73,6 +73,30 @@ endif (${WITH_SOCKS} STREQUAL ON)
 
 option(WITH_SRV "Include SRV lookup support?" OFF)
 
+option(WITH_THREADING "Include client library threading support?" ON)
+if (${WITH_THREADING} STREQUAL ON)
+	add_definitions("-DWITH_THREADING")
+	if (WIN32)
+		if (CMAKE_CL_64)
+			set (PTHREAD_LIBRARIES C:\\pthreads\\Pre-built.2\\lib\\x64\\pthreadVC2.lib)
+		else (CMAKE_CL_64)
+			set (PTHREAD_LIBRARIES C:\\pthreads\\Pre-built.2\\lib\\x86\\pthreadVC2.lib)
+		endif (CMAKE_CL_64)
+		set (PTHREAD_INCLUDE_DIR C:\\pthreads\\Pre-built.2\\include)
+	else (WIN32)
+		find_library(LIBPTHREAD pthread)
+		if (LIBPTHREAD)
+			set (PTHREAD_LIBRARIES pthread)
+		else (LIBPTHREAD)
+			set (PTHREAD_LIBRARIES "")
+		endif()
+		set (PTHREAD_INCLUDE_DIR "")
+	endif (WIN32)
+else (${WITH_THREADING} STREQUAL ON)
+	set (PTHREAD_LIBRARIES "")
+	set (PTHREAD_INCLUDE_DIR "")
+endif (${WITH_THREADING} STREQUAL ON)
+
 option(DOCUMENTATION "Build documentation?" ON)
 
 # ========================================
