@@ -5,6 +5,9 @@ Library:
 - Fix memory leak that occurred if mosquitto_reconnect() was used when TLS
 errors were present. Closes #592.
 
+Build:
+- Fix clients not being compiled with threading support when using CMake.
+  Closes #983.
 
 1.5.3 - 20180925
 ================
